RESOLVED FIXED82678
IndexedDB: Race condition causes version change transaction to commit after onblocked
https://bugs.webkit.org/show_bug.cgi?id=82678
Summary IndexedDB: Race condition causes version change transaction to commit after o...
Joshua Bell
Reported 2012-03-29 17:10:23 PDT
IndexedDB: Race condition causes version change transaction to commit after onblocked
Attachments
Patch (1.76 KB, patch)
2012-03-29 17:15 PDT, Joshua Bell
no flags
Patch (6.83 KB, patch)
2012-03-30 11:56 PDT, Joshua Bell
no flags
Patch (7.73 KB, patch)
2012-03-30 13:51 PDT, Joshua Bell
no flags
Patch for landing (10.34 KB, patch)
2012-03-30 15:05 PDT, Joshua Bell
no flags
Joshua Bell
Comment 1 2012-03-29 17:15:35 PDT
WebKit Review Bot
Comment 2 2012-03-29 17:21:14 PDT
Attachment 134700 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:13: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joshua Bell
Comment 3 2012-03-30 11:02:06 PDT
Comment on attachment 134700 [details] Patch Prematurely optimized - shouldn't look at m_readyState == DONE since cursor.continue() would reset the ready state. Need to explicitly test for blocked event.
Joshua Bell
Comment 4 2012-03-30 11:56:45 PDT
Joshua Bell
Comment 5 2012-03-30 11:57:53 PDT
Comment on attachment 134852 [details] Patch Attached test verifies the patch in Chromium. The test fails in DRT - the worker is being treated as a different origin?
Joshua Bell
Comment 6 2012-03-30 13:51:00 PDT
Joshua Bell
Comment 7 2012-03-30 13:53:00 PDT
Tracked down the DRT issue - http://webkit.org/b/82776 - nontrivial, unfortunately, so landing the test marked FAIL for now and will run it under Chromium's browser test system. tony@, can you take a look?
Tony Chang
Comment 8 2012-03-30 13:59:56 PDT
Comment on attachment 134872 [details] Patch I think you need to commit an -expected.txt file otherwise the test will show up as MISSING.
Joshua Bell
Comment 9 2012-03-30 15:05:23 PDT
Created attachment 134892 [details] Patch for landing
WebKit Review Bot
Comment 10 2012-03-30 16:05:04 PDT
Comment on attachment 134892 [details] Patch for landing Clearing flags on attachment: 134892 Committed r112740: <http://trac.webkit.org/changeset/112740>
WebKit Review Bot
Comment 11 2012-03-30 16:05:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.