IndexedDB: Race condition causes version change transaction to commit after onblocked https://bugs.webkit.org/show_bug.cgi?id=82678

Source/WebCore:

For a version change event, the blocked and success events could both be queued
before either is dispatched. The transaction would erroneously be allowed to commit
after the blocked event was dispatched; it should not be, as the request was not
finished.

Reviewed by Tony Chang.

Test: storage/indexeddb/dont-commit-on-blocked.html

* Modules/indexeddb/IDBRequest.cpp:
(WebCore::IDBRequest::dispatchEvent):

LayoutTests:

Landing test marked PASS FAIL as WK82776 prevents it from running in DRT; will
run it as a Chromium browser test for now.

Reviewed by Tony Chang.

* platform/chromium/test_expectations.txt:
* storage/indexeddb/dont-commit-on-blocked.html: Added.
* storage/indexeddb/resources/dont-commit-on-blocked-worker.js: Added.
(request.onsuccess):
(onSetVersionBlocked):
(onSetVersionSuccess):
(onTransactionComplete):


Canonical link: https://commits.webkit.org/100119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112740 268f45cc-cd09-0410-ab3c-d52691b4dbfc